Almost finished - blocked on design

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
         </button>
       </div>
     </div>
-    <span>*I do not own the images</span>
+    <span>*I do not own the image</span>
   </body>
 </html>
