--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </button>
       </div>
     </div>
-    <span>*I do not own the image</span>
+    <img src="/skeletor.gif" alt="skeleton" id="gif" />
+    <span>*I do not own the images</span>
   </body>
 </html>
