--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="button-down" id="proper-case">Proper Hell</button>
         <button class="button-down" id="sentence-case">Sentence Hell</button>
         <button class="button-down" id="save-text-file">
-          Download as Hell
+          Download from Hell
         </button>
       </div>
     </div>
